<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#D1D1D1">

    <AutoCompleteTextView
        android:id="@+id/actvOrigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/dimen_24"
        android:completionThreshold="1"
        android:hint="@string/origin"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/cbOriginAnywhere"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anywhere"
        app:layout_constraintTop_toBottomOf="@id/actvOrigin"
        app:layout_constraintStart_toStartOf="@id/actvOrigin"
        app:layout_constraintEnd_toEndOf="@id/actvOrigin" />

    <AutoCompleteTextView
        android:id="@+id/actvDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cbOriginAnywhere"
        android:layout_margin="@dimen/dimen_24"
        android:completionThreshold="1"
        android:hint="@string/destination"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/cbDestinationAnywhere"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anywhere"
        app:layout_constraintTop_toBottomOf="@id/actvDestination"
        app:layout_constraintStart_toStartOf="@id/actvDestination"
        app:layout_constraintEnd_toEndOf="@id/actvDestination" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        app:layout_constraintTop_toBottomOf="@id/cbDestinationAnywhere"
        app:layout_constraintStart_toStartOf="@id/cbDestinationAnywhere"
        android:text="@string/price_sort" />

    <RadioGroup
        android:id="@+id/rgPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvPrice">

        <RadioButton
            android:id="@+id/rbAsc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asc_price" />

        <RadioButton
            android:id="@+id/rbDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/desc_price" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvPriceRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        app:layout_constraintTop_toBottomOf="@id/rgPrice"
        app:layout_constraintStart_toStartOf="@id/rgPrice"
        android:text="@string/price_range" />

    <EditText
        android:id="@+id/etPriceRangeFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/from"
        android:layout_marginEnd="@dimen/dimen_8"
        app:layout_constraintTop_toBottomOf="@id/tvPriceRange"
        app:layout_constraintStart_toStartOf="@id/tvPriceRange"
        app:layout_constraintEnd_toStartOf="@id/etPriceRangeTo" />

    <EditText
        android:id="@+id/etPriceRangeTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        android:layout_marginStart="@dimen/dimen_8"
        app:layout_constraintTop_toBottomOf="@id/tvPriceRange"
        app:layout_constraintStart_toEndOf="@id/etPriceRangeFrom"
        app:layout_constraintEnd_toEndOf="@id/rgPrice" />

    <CheckBox
        android:id="@+id/cbPriceTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_limit"
        app:layout_constraintTop_toBottomOf="@id/etPriceRangeTo"
        app:layout_constraintStart_toStartOf="@id/etPriceRangeTo"
        app:layout_constraintEnd_toEndOf="@id/etPriceRangeTo" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_margin="@dimen/dimen_24"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/search" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/l_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:lottie_rawRes="@raw/loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

</androidx.constraintlayout.widget.ConstraintLayout>