<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_24"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/total_items" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDragons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvTotal"
        app:layout_constraintBottom_toTopOf="@id/btnBack" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_margin="@dimen/dimen_24"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/other_search" />

</androidx.constraintlayout.widget.ConstraintLayout>